--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         build:
             context: ./workspace
             args:
-                - INSTALL_XDEBUG=false
+                - INSTALL_XDEBUG=true
                 - INSTALL_SOAP=false
                 - INSTALL_MONGO=false
                 - INSTALL_NODE=false
@@ -50,18 +50,18 @@ services:
         build:
             context: ./php-fpm
             args:
-                - INSTALL_XDEBUG=false
+                - INSTALL_XDEBUG=true
                 - INSTALL_SOAP=false
                 - INSTALL_MONGO=false
-                - INSTALL_ZIP_ARCHIVE=false
+                - INSTALL_ZIP_ARCHIVE=true
                 - INSTALL_BCMATH=false
-                - INSTALL_PHPREDIS=false
-                - INSTALL_MEMCACHED=false
+                - INSTALL_PHPREDIS=true
+                - INSTALL_MEMCACHED=true
                 - INSTALL_OPCACHE=false
                 - INSTALL_EXIF=false
                 - INSTALL_AEROSPIKE_EXTENSION=false
                 - CODEIGNITER=false
-            dockerfile: Dockerfile-70
+            dockerfile: Dockerfile-71
         volumes_from:
             - applications
         expose:
@@ -93,45 +93,17 @@ services:
         links:
             - php-fpm
 
-### Apache Server Container #################################
-
-    apache2:
-        build:
-            context: ./apache2
-            args:
-                - PHP_SOCKET=php-fpm:9000
-        volumes_from:
-            - applications
-        volumes:
-            - ./logs/apache2:/var/log/apache2
-        ports:
-            - "80:80"
-            - "443:443"
-        links:
-            - php-fpm
-
-### HHVM Container ##########################################
-
-    hhvm:
-        build: ./hhvm
-        volumes_from:
-            - applications
-        expose:
-            - "9000"
-        links:
-            - workspace
-
 ### Minio Container #########################################
 
-    minio:
-        build: ./minio
-        volumes:
-            - minio:/export
-        ports:
-          - "9000:9000"
-        environment:
-          MINIO_ACCESS_KEY: access
-          MINIO_SECRET_KEY: secretkey
+#    minio:
+#        build: ./minio
+#        volumes:
+#            - minio:/export
+#        ports:
+#          - "9000:9000"
+#        environment:
+#          MINIO_ACCESS_KEY: access
+#          MINIO_SECRET_KEY: secretkey
 
 ### MySQL Container #########################################
 
@@ -148,75 +120,14 @@ services:
         ports:
             - "3306:3306"
 
-### MariaDB Container #######################################
-
-    mariadb:
-        build: ./mariadb
-        volumes:
-            - mariadb:/var/lib/mysql
-        ports:
-            - "3306:3306"
-        environment:
-            MYSQL_DATABASE: homestead
-            MYSQL_USER: homestead
-            MYSQL_PASSWORD: secret
-            MYSQL_ROOT_PASSWORD: root
-
-### PostgreSQL Container ####################################
-
-    postgres:
-        build: ./postgres
-        volumes:
-            - postgres:/var/lib/postgresql/data
-        ports:
-            - "5432:5432"
-        environment:
-            POSTGRES_DB: homestead
-            POSTGRES_USER: homestead
-            POSTGRES_PASSWORD: secret
-
-### PostgreSQL PostGis Container ############################
-
-    postgres-postgis:
-        build: ./postgres-postgis
-        volumes:
-            - postgres:/var/lib/postgresql/data
-        ports:
-            - "5432:5432"
-        environment:
-            POSTGRES_DB: homestead
-            POSTGRES_USER: homestead
-            POSTGRES_PASSWORD: secret
-
-### Neo4j Container #########################################
-
-    neo4j:
-        build: ./neo4j
-        ports:
-            - "7474:7474"
-            - "1337:1337"
-        environment:
-            - NEO4J_AUTH=homestead:secret
-        volumes:
-            - neo4j:/var/lib/neo4j/data
-
 ### MongoDB Container #######################################
 
-    mongo:
-        build: ./mongo
-        ports:
-            - "27017:27017"
-        volumes:
-            - mongo:/data/db
-
-### RethinkDB Container #######################################
-
-    rethinkdb:
-        build: ./rethinkdb
-        ports:
-            - "8090:8080"
-        volumes:
-            - rethinkdb:/data/rethinkdb_data
+#    mongo:
+#        build: ./mongo
+#        ports:
+#            - "27017:27017"
+#        volumes:
+#            - mongo:/data/db
 
 ### Redis Container #########################################
 
@@ -227,41 +138,16 @@ services:
         ports:
             - "6379:6379"
 
-### Aerospike c Container ###################################
-
-    aerospike:
-        build: ./aerospike
-        volumes_from:
-            - workspace
-        volumes:
-            - aerospike:/opt/aerospike/data
-        ports:
-            - "3000:3000"
-            - "3001:3001"
-            - "3002:3002"
-            - "3003:3003"
-
-
 ### Memcached Container #####################################
 
-    memcached:
-        build: ./memcached
-        volumes:
-            - memcached:/var/lib/memcached
-        ports:
-            - "11211:11211"
-        links:
-            - php-fpm
-
-### Beanstalkd Container ####################################
-
-    beanstalkd:
-        build: ./beanstalkd
-        ports:
-            - "11300:11300"
-        privileged: true
-        links:
-            - php-fpm
+#    memcached:
+#        build: ./memcached
+#        volumes:
+#            - memcached:/var/lib/memcached
+#        ports:
+#            - "11211:11211"
+#        links:
+#            - php-fpm
 
 ### RabbitMQ Container ######################################
 
@@ -278,31 +164,22 @@ services:
         links:
             - php-fpm
 
-### Beanstalkd Console Container ############################
-
-    beanstalkd-console:
-        build: ./beanstalkd-console
-        ports:
-            - "2080:2080"
-        links:
-            - beanstalkd
-
 ### Caddy Server Container ##################################
 
-    caddy:
-        build: ./caddy
-        ports:
-            - "80:80"
-            - "443:443"
-            - "2015:2015"
-        volumes_from:
-            - applications
-        volumes:
-            - ./caddy/Caddyfile:/etc/Caddyfile
-            - ./logs/caddy:/var/log/caddy
-            - caddy:/root/.caddy
-        links:
-            - php-fpm
+#    caddy:
+#        build: ./caddy
+#        ports:
+#            - "80:80"
+#            - "443:443"
+#            - "2015:2015"
+#        volumes_from:
+#            - applications
+#        volumes:
+#            - ./caddy/Caddyfile:/etc/Caddyfile
+#            - ./logs/caddy:/var/log/caddy
+#            - caddy:/root/.caddy
+#        links:
+#            - php-fpm
 
 ### phpMyAdmin Container ####################################
 
@@ -314,21 +191,12 @@ services:
             MYSQL_PASSWORD: secret
             MYSQL_ROOT_PASSWORD: root
         ports:
-            - "8080:80"
+            - "8888:80"
         links:
             # for mysql container
             - "mysql:db"
             # for mariadb container
             # - "mariadb:db"
-
-### pgAdmin Container #######################################
-
-    pgadmin:
-        build: ./pgadmin
-        ports:
-            - "5050:5050"
-        links:
-            - postgres
 
 ### ElasticSearch Container #################################
 
@@ -345,38 +213,28 @@ services:
 
 ### Selenium Container #########################################
 
-    selenium:
-        build: ./selenium
-        ports:
-            - "4444:4444"
-        volumes:
-            # see https://github.com/SeleniumHQ/docker-selenium#running-the-images
-            - /dev/shm:/dev/shm
+#    selenium:
+#        build: ./selenium
+#        ports:
+#            - "4444:4444"
+#        volumes:
+#            # see https://github.com/SeleniumHQ/docker-selenium#running-the-images
+#            - /dev/shm:/dev/shm
 
 ### Volumes Setup ###########################################
 
 volumes:
     mysql:
         driver: "local"
-    postgres:
-        driver: "local"
     memcached:
         driver: "local"
     redis:
-        driver: "local"
-    neo4j:
-        driver: "local"
-    mariadb:
         driver: "local"
     mongo:
         driver: "local"
     minio:
         driver: "local"
-    rethinkdb:
-        driver: "local"
     phpmyadmin:
-        driver: "local"
-    aerospike:
         driver: "local"
     caddy:
         driver: "local"
