FENV-2 - General directory config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     applications:
         image: tianon/true
         volumes:
-            - ../:/var/www
+            - ../code/:/var/www/mj
 #            - ../sample/:/var/www/sample
 
 ### Workspace Utilities Container ###########################
