--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -6,4 +6,6 @@
 [mysql]
 
 [mysqld]
+max_allowed_packet = 64M
+wait_timeout = 6000
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
